# inventree-rma-plugin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
inventree_rma_plugin/: __init__.py  api.py  apps.py  models.py  rma_automation.py
inventree_rma_plugin/migrations/: 0001_initial.py
inventree_rma_plugin/static/: repair_panel.js
tests/: __init__.py  test_rma_automation.py
