[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-rma-plugin"
version = "0.2.0"
description = "InvenTree plugin for automating RMA workflow with repair parts tracking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Timmy Hadwen", email = "timmy@hadwen.net"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["inventree", "plugin", "rma", "return-order"]

[project.urls]
Homepage = "https://github.com/timmyhadwen/inventree-rma-plugin"
Repository = "https://github.com/timmyhadwen/inventree-rma-plugin"

[project.entry-points."inventree_plugins"]
RMAAutomationPlugin = "inventree_rma_plugin.rma_automation:RMAAutomationPlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["inventree_rma_plugin*"]

[tool.setuptools.package-data]
"inventree_rma_plugin" = [
    "static/**/*",
    "migrations/*",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["inventree_rma_plugin"]
